smaller z-index values for perfect-scrollbars because of the autocomplete box scroll preventer thingy

--- a/src/app/core/global-scss/partials/plugins/perfect-scrollbar.scss
+++ b/src/app/core/global-scss/partials/plugins/perfect-scrollbar.scss
@@ -15,7 +15,7 @@
         background: none !important;
         margin: 4px 0;
         height: 4px;
-        z-index: 99;
+        z-index: 49;
 
         > .ps-scrollbar-x {
             height: 4px;
@@ -26,7 +26,7 @@
         background: none !important;
         margin: 4px 0;
         width: 4px;
-        z-index: 99;
+        z-index: 49;
 
         > .ps-scrollbar-y {
             width: 4px;
